use rt util
GitOrigin-RevId: 518790cb47aff044fd4a7e2451c07a0b75308114