@@ -1,4 +1,4 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.model.module.impl;
 
 import org.jetbrains.annotations.NotNull;
@@ -12,7 +12,6 @@ import org.jetbrains.jps.util.JpsPathUtil;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Set;
 
 public final class JpsModuleSourceRootImpl<P extends JpsElement> extends JpsCompositeElementBase<JpsModuleSourceRootImpl<P>> implements JpsTypedModuleSourceRoot<P> {
@@ -89,7 +88,7 @@ public final class JpsModuleSourceRootImpl<P extends JpsElement> extends JpsComp
 
   @Override
   public @NotNull Path getPath() {
-    return Paths.get(JpsPathUtil.urlToPath(url));
+    return Path.of(JpsPathUtil.urlToPath(url));
   }
 
   @SuppressWarnings("removal")
